--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -52,12 +52,12 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-80125c00.js">
+		<link rel="modulepreload" href="./_app/immutable/start-52907c8a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-125169be.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-edfb7b48.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-7848b8d0.js">
@@ -95,6 +95,7 @@
                 </li></ul>
           <div class="m-auto"><div class="flex block space-x-6 md:space-x-2 m-auto w-full justify-end text-center"><a href="https://twitter.com/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fa-brands fa-twitter"></i>
         </a><a href="https://www.instagram.com/utxoprague/" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-instagram"></i>
+        </a><a href="https://www.facebook.com/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-facebook"></i>
         </a><a href="https://t.me/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-telegram"></i>
         </a></div>
   </div></div></div></div></nav></div>
@@ -103,7 +104,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-4.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-3.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%20utxo.cz%20%23utxo23%20" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -116,6 +117,7 @@
       <div class="sm:mt-0 mt-6 sm:w-1/3 mr-2">
   <div class="w-auto"><div class="sm:flex flex-wrap gap-3 justify-end"><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://twitter.com/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fa-brands fa-twitter mr-2 my-auto"></i>Twitter</a>
           </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://www.instagram.com/utxoprague/" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-instagram mr-2 my-auto"></i>Instagram</a>
+          </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://www.facebook.com/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-facebook mr-2 my-auto"></i>Facebook</a>
           </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://t.me/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-telegram mr-2 my-auto"></i>Telegram</a>
           </div></div></div></div></div>
     <div class="relative mx-auto px-6 pt-10 pb-6 max-w-7xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
@@ -127,14 +129,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vne4c1">
-			import { start } from "./_app/immutable/start-80125c00.js";
+		<script type="module" data-sveltekit-hydrate="100ovhw">
+			import { start } from "./_app/immutable/start-52907c8a.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vne4c1"]').parentNode,
-				version: "1681556718131",
+				target: document.querySelector('[data-sveltekit-hydrate="100ovhw"]').parentNode,
+				version: "1681576398149",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
