--- a/lide/josef-gattermayer.html
+++ b/lide/josef-gattermayer.html
@@ -53,12 +53,12 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-80125c00.js">
+		<link rel="modulepreload" href="../_app/immutable/start-52907c8a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-125169be.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-edfb7b48.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-7848b8d0.js">
@@ -103,6 +103,7 @@
                 </li></ul>
           <div class="m-auto"><div class="flex block space-x-6 md:space-x-2 m-auto w-full justify-end text-center"><a href="https://twitter.com/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fa-brands fa-twitter"></i>
         </a><a href="https://www.instagram.com/utxoprague/" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-instagram"></i>
+        </a><a href="https://www.facebook.com/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-facebook"></i>
         </a><a href="https://t.me/utxoprague" class="w-6 h-6 bg-white rounded-lg hover:bg-utxo-gradient hover:text-white" target="_blank" rel="noreferrer"><i class="fab fa-telegram"></i>
         </a></div>
   </div></div></div></div></nav></div>
@@ -147,6 +148,7 @@
       <div class="sm:mt-0 mt-6 sm:w-1/3 mr-2">
   <div class="w-auto"><div class="sm:flex flex-wrap gap-3 justify-end"><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://twitter.com/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fa-brands fa-twitter mr-2 my-auto"></i>Twitter</a>
           </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://www.instagram.com/utxoprague/" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-instagram mr-2 my-auto"></i>Instagram</a>
+          </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://www.facebook.com/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-facebook mr-2 my-auto"></i>Facebook</a>
           </div><div class="mr-4 sm:mr-0 inline-block sm:block hover:text-custom-green"><a href="https://t.me/utxoprague" class="block flex" target="_blank" rel="noreferrer"><i class="fab fa-telegram mr-2 my-auto"></i>Telegram</a>
           </div></div></div></div></div>
     <div class="relative mx-auto px-6 pt-10 pb-6 max-w-7xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
@@ -158,14 +160,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1868ffe">
-			import { start } from "../_app/immutable/start-80125c00.js";
+		<script type="module" data-sveltekit-hydrate="ag922g">
+			import { start } from "../_app/immutable/start-52907c8a.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1868ffe"]').parentNode,
-				version: "1681556718131",
+				target: document.querySelector('[data-sveltekit-hydrate="ag922g"]').parentNode,
+				version: "1681576398149",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
